--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,16 +2,9 @@
 spring.application.name=api-gymnasio
 server.port=8080
 
-# --- DataSource: Transaction Pooler (IPv4) ---
-# host como sale en el panel y usuario con el sufijo
-#spring.datasource.url=jdbc:postgresql://aws-1-us-east-1.pooler.supabase.com:6543/postgres?sslmode=require&preferQueryMode=simple&prepareThreshold=0&ApplicationName=api-gymnasio
-#spring.datasource.username=postgres.vfeipenokzawyqqckgho
-#spring.datasource.password=EdelizaHuaman0
-#spring.datasource.driver-class-name=org.postgresql.Driver
-
 spring.datasource.url=jdbc:mysql://localhost:3306/gymnasioBD?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&characterEncoding=utf8&serverTimezone=America/Lima
 spring.datasource.username=root
-spring.datasource.password=145236#
+spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 # --- JPA / Hibernate ---
