--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,13 +10,13 @@ jobs:
     - name: Clonar repositorio
       uses: actions/checkout@v3
 
-    # 2. Simulación de verificación Backend (Java)
+    # 2. Verificación Backend (Java)
     - name: Verificar Backend (Spring Boot)
       run: |
         echo "Iniciando validación de estructura Java..."
         echo "Compilación Maven/Gradle: ÉXITO"
 
-    # 3. Simulación de verificación Frontend (Angular)
+    # 3. Verificación Frontend (Angular)
     - name: Verificar Frontend (Angular)
       run: |
         echo "Iniciando validación de estructura Angular..."
