--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8080
 
 spring.datasource.url=jdbc:mysql://localhost:3306/gymnasioBD?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&characterEncoding=utf8&serverTimezone=America/Lima
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=145236#
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 # --- JPA / Hibernate ---
